--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -22,11 +22,11 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - label: "Session Recap"
-         name: "body"
-         widget: "markdown"
-         editor:
-         buttons: [bold, italic, code, link, heading, quote, bullist, numlist]
-
+        name: "body"
+        widget: "markdown"
+        editor:
+          # Disables image insertion in the Rich Text field
+          buttons: [bold, italic, code, link, heading, quote, bullist, numlist]
   # Collection for Characters (NPCs or PCs)
   - name: "characters"
     label: "Characters"
